Fix info button spacing for vertical orientation

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1308,7 +1308,7 @@ img[src*='piccolo'].staging-img {
   .info {
     display: block;
     position: absolute;
-    left: 130px;
+    left: 74px;
     top: -50px;
     font-size: 25px;
     color: #053778;
@@ -1396,7 +1396,7 @@ img[src*='piccolo'].staging-img {
   }
 
   .info {
-    left: 118px;
+    left: 62px;
     font-size: 24px;
   }
 
